:art: added firebase admin for auth and dynamodb/s3 setup
