# src/utils/api-types.ts
@@ -1,0 +1,5 @@
+import { components } from "../../schema";
+
+export type BaseResponse = components['schemas']['BaseSchema'];
+
+export type IType = components['schemas']['UserType'];
